TKIT-78 Fixed next and previous buttons are overlapped mobile version

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -19995,12 +19995,13 @@ input#edit-field-image-und-0-upload::before {
 .toolkit-page #block-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.blue,
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.blue {
   text-align: left;
+  margin-right: 15px;
 }
 .toolkit-page #block-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.blue .previous-button,
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.blue .previous-button {
   background: url(../images/arrow-blue-left.png) no-repeat 0px 0px;
   background-size: 30px 43px;
-  padding-left: 50px;
+  padding-left: 43px;
 }
 .toolkit-page #block-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.blue .previous-button .nav-info,
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.blue .previous-button .nav-info {
@@ -20014,7 +20015,7 @@ input#edit-field-image-und-0-upload::before {
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.green .previous-button {
   background: url(../images/arrow-green-left.png) no-repeat 0px 0px;
   background-size: 30px 43px;
-  padding-left: 50px;
+  padding-left: 43px;
 }
 .toolkit-page #block-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.green .previous-button .nav-info,
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .prev-button.green .previous-button .nav-info {
@@ -20029,7 +20030,7 @@ input#edit-field-image-und-0-upload::before {
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .next-button.blue .nexting-button {
   background: url(../images/arrow-blue-right.png) no-repeat 100% 0px;
   background-size: 30px 43px;
-  padding-right: 50px;
+  padding-right: 43px;
 }
 .toolkit-page #block-hwc-toolkit-toolkit-nav .key-next-prev-buttons .next-button.blue .nexting-button .nav-info,
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .next-button.blue .nexting-button .nav-info {
@@ -20044,7 +20045,7 @@ input#edit-field-image-und-0-upload::before {
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .next-button.green .nexting-button {
   background: url(../images/arrow-green-right.png) no-repeat 100% 0px;
   background-size: 30px 43px;
-  padding-right: 50px;
+  padding-right: 43px;
 }
 .toolkit-page #block-hwc-toolkit-toolkit-nav .key-next-prev-buttons .next-button.green .nexting-button .nav-info,
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons .next-button.green .nexting-button .nav-info {
@@ -25862,6 +25863,7 @@ input#edit-field-image-und-0-upload::before {
   .toolkit-page #block-hwc-toolkit-toolkit-nav {
     margin-bottom: 0px;
     display: inline-block;
+    width: 100%;
   }
   .toolkit-page #block-hwc-toolkit-toolkit-nav .prev-button {
     margin-bottom: 25px;
