--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -10982,10 +10982,11 @@ input#edit-field-image-und-0-upload::before {
 			}
 			.prev-button.blue{
 				text-align: left;
+				margin-right: 15px;
 				.previous-button{
 					background: url(../images/arrow-blue-left.png) no-repeat 0px 0px;
     				background-size: 30px 43px;
-    				padding-left: 50px;
+    				padding-left: 43px;
     				.nav-info{
 						color:@color-h2-toolkit;
     				}
@@ -10996,7 +10997,7 @@ input#edit-field-image-und-0-upload::before {
 				.previous-button{
 					background: url(../images/arrow-green-left.png) no-repeat 0px 0px;
     				background-size: 30px 43px;
-    				padding-left: 50px;
+    				padding-left: 43px;
     				.nav-info{
 						color:@h2-default-color-2;
     				}
@@ -11008,7 +11009,7 @@ input#edit-field-image-und-0-upload::before {
 				.nexting-button{
 					background: url(../images/arrow-blue-right.png) no-repeat 100% 0px;
     				background-size: 30px 43px;
-    				padding-right: 50px;
+    				padding-right: 43px;
     				.nav-info{
 						color: @color-h2-toolkit;
     				}
@@ -11020,7 +11021,7 @@ input#edit-field-image-und-0-upload::before {
 				.nexting-button{
 					background: url(../images/arrow-green-right.png) no-repeat 100% 0px;
     				background-size: 30px 43px;
-    				padding-right: 50px;
+    				padding-right: 43px;
     				.nav-info{
 						color:@h2-default-color-2;
     				}
