--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -2897,6 +2897,7 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
 	#block-hwc-toolkit-toolkit-nav{
 		margin-bottom: 0px;
 		display: inline-block;
+		width: 100%;
 		.prev-button{
 			margin-bottom: 25px;
 		}
